--- a/css/style.css
+++ b/css/style.css
@@ -230,7 +230,12 @@ a:focus {
   background-color: #133e3f;
   border: 1px solid #133e3f;
   color: #ffffff;
-  margin-top: 35px;
+  margin-top: 65px;
+
+}
+
+html{
+  scroll-behavior: smooth;
 }
 
 .slider_section .detail-box a:hover {
@@ -483,7 +488,7 @@ a:focus {
   background: linear-gradient(to bottom, rgba(19,62,63, 0.8) 0%, rgba(19,62,63, 0.8) 100%), url(../images/fw.jpg);
   background-size: cover;
   background-repeat: no-repeat;
-  background-position: center; 
+  background-position: center;
   color: #ffffff;
 }
 
