--- a/css/style.css
+++ b/css/style.css
@@ -943,3 +943,8 @@ html{
 
 /* end footer section*/
 /*# sourceMappingURL=style.css.map */
+
+.viz section {
+  margin-left: 0%;
+  margin-right: 0%;
+}
