fixed mash ups data

--- a/css/style.css
+++ b/css/style.css
@@ -1037,3 +1037,14 @@ a:hover {
   border-bottom: 1px solid black;
   color: black;
 }
+
+.card-title {
+  font-size: 1.1rem!important;
+  font-weight: bold;
+  border-bottom: 1px solid rgba(75,197,184, 0.8);
+}
+
+.card-text {
+  font-size: 1.1rem!important;
+}
+
